# sdl-playground

./: .gitignore  CMakeLists.txt  README.md  get-sdl.bat  get-sdl.py  get-stb.bat  get-stb.py  main.cpp
